--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@ body {
     align-items: center;
     background-color: #E1EDE6;
     height: 100px;
+    width: 100%;
     
 }
 .header-left {
@@ -57,6 +58,7 @@ body {
   size: 20px;
 
 }
+
 .hero {
   display: flex;
   flex-direction: column;
@@ -94,6 +96,7 @@ body {
 }
 .catalog-top {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -118,7 +121,36 @@ body {
   background-color: #376B44;
   color: white;
 }
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  height: 730px;
+  padding: 20px 0;
+  background-color: #E1EDE6;
+}
+.card h3 {
+  margin-right: 50%;
+}
+.card img {
+  width: 310px;
+  height: 422px;
+}
 .footer {
   background-color: #E1EDE6;
   height: 168px;
+}
+.card-container-main {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  
+}
+.card-container {
+display: flex;
+justify-content: space-around;
+/*justify-content: center;
+gap: 30px;*/
 }
